--- a/index.html
+++ b/index.html
@@ -60,8 +60,6 @@
 
     <script>
         const API_KEY = "2GzxJfKu10qeIJcl0FsTY5AbhgXQj2ZgaXJhm6jHbK";
-        const CANVAS_WIDTH = window.innerWidth;
-        const CANVAS_HEIGHT = window.innerHeight;
         const WORLD_WIDTH = 2000;
         const WORLD_HEIGHT = 2000;
 
@@ -386,16 +384,16 @@
                 this.playerId = this.sessionId + '_' + Math.random().toString(36).substr(2, 9);
 
                 // Set canvas size
-                this.canvas.width = CANVAS_WIDTH;
-                this.canvas.height = CANVAS_HEIGHT;
+                this.canvas.width = window.innerWidth;
+                this.canvas.height = window.innerHeight;
 
                 // Game state
                 this.gameState = { players: [], food: [] };
                 this.camera = { x: 0, y: 0 };
-                this.mousePos = { x: CANVAS_WIDTH / 2, y: CANVAS_HEIGHT / 2 };
+                this.mousePos = { x: window.innerWidth / 2, y: window.innerHeight / 2 };
 
                 // Cursor movement tracking for drift behavior
-                this.lastMousePos = { x: CANVAS_WIDTH / 2, y: CANVAS_HEIGHT / 2 };
+                this.lastMousePos = { x: window.innerWidth / 2, y: window.innerHeight / 2 };
                 this.lastMouseMoveTime = Date.now();
                 this.cursorStillThreshold = 100; // ms - time before entering drift mode
                 this.isDrifting = false;
@@ -438,7 +436,24 @@
                 // Join the game
                 this.publish(this.sessionId, "playerJoin", { playerId: this.playerId });
 
+                // Ensure proper sizing on initialization
+                this.handleResize();
+
                 console.log("Game view initialized, player ID:", this.playerId);
+            }
+
+            handleResize() {
+                // Update canvas dimensions
+                this.canvas.width = window.innerWidth;
+                this.canvas.height = window.innerHeight;
+                
+                // Recalculate camera position to keep player centered
+                this.camera.x = this.localPlayer.x - window.innerWidth / 2;
+                this.camera.y = this.localPlayer.y - window.innerHeight / 2;
+                this.camera.x = Math.max(0, Math.min(WORLD_WIDTH - window.innerWidth, this.camera.x));
+                this.camera.y = Math.max(0, Math.min(WORLD_HEIGHT - window.innerHeight, this.camera.y));
+                
+                console.log("Game resized to:", window.innerWidth, "x", window.innerHeight);
             }
 
             setupInput() {
@@ -467,9 +482,13 @@
                 });
 
                 // Handle window resize
+                let resizeTimeout;
                 window.addEventListener('resize', () => {
-                    this.canvas.width = window.innerWidth;
-                    this.canvas.height = window.innerHeight;
+                    // Debounce resize events to prevent excessive updates
+                    clearTimeout(resizeTimeout);
+                    resizeTimeout = setTimeout(() => {
+                        this.handleResize();
+                    }, 100); // Wait 100ms after last resize event
                 });
             }
 
@@ -563,10 +582,10 @@
                 this.checkLocalFoodCollisions();
 
                 // Update camera to follow local player
-                this.camera.x = this.localPlayer.x - CANVAS_WIDTH / 2;
-                this.camera.y = this.localPlayer.y - CANVAS_HEIGHT / 2;
-                this.camera.x = Math.max(0, Math.min(WORLD_WIDTH - CANVAS_WIDTH, this.camera.x));
-                this.camera.y = Math.max(0, Math.min(WORLD_HEIGHT - CANVAS_HEIGHT, this.camera.y));
+                this.camera.x = this.localPlayer.x - window.innerWidth / 2;
+                this.camera.y = this.localPlayer.y - window.innerHeight / 2;
+                this.camera.x = Math.max(0, Math.min(WORLD_WIDTH - window.innerWidth, this.camera.x));
+                this.camera.y = Math.max(0, Math.min(WORLD_HEIGHT - window.innerHeight, this.camera.y));
             }
 
             checkLocalFoodCollisions() {
@@ -665,7 +684,7 @@
 
                 // Clear canvas
                 this.ctx.fillStyle = '#90EE90';
-                this.ctx.fillRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+                this.ctx.fillRect(0, 0, window.innerWidth, window.innerHeight);
 
                 // Save context for camera transform
                 this.ctx.save();
@@ -731,17 +750,17 @@
                 const startX = -(this.camera.x % gridSize);
                 const startY = -(this.camera.y % gridSize);
 
-                for (let x = startX; x < CANVAS_WIDTH; x += gridSize) {
+                for (let x = startX; x < window.innerWidth; x += gridSize) {
                     this.ctx.beginPath();
                     this.ctx.moveTo(x, 0);
-                    this.ctx.lineTo(x, CANVAS_HEIGHT);
+                    this.ctx.lineTo(x, window.innerHeight);
                     this.ctx.stroke();
                 }
 
-                for (let y = startY; y < CANVAS_HEIGHT; y += gridSize) {
+                for (let y = startY; y < window.innerHeight; y += gridSize) {
                     this.ctx.beginPath();
                     this.ctx.moveTo(0, y);
-                    this.ctx.lineTo(CANVAS_WIDTH, y);
+                    this.ctx.lineTo(window.innerWidth, y);
                     this.ctx.stroke();
                 }
             }
