--- a/index.html
+++ b/index.html
@@ -256,11 +256,11 @@
       #orbSelectionModal {
         background: white;
         border-radius: 12px;
-        padding: 30px;
+        padding: 20px;
         text-align: center;
         box-shadow: 0 8px 24px rgba(0, 0, 0, 0.3);
-        max-width: 500px;
-        width: 90%;
+        max-width: 1400px;
+        width: 99%;
       }
 
       #orbSelectionModal h2 {
@@ -277,8 +277,8 @@
 
       .orb-options {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 15px;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 20px;
         margin-bottom: 20px;
       }
 
@@ -306,19 +306,19 @@
       }
 
       .orb-preview {
-        width: 60px;
-        height: 60px;
+        width: 270px;
+        height: 270px;
         border-radius: 50%;
         display: flex;
         align-items: center;
         justify-content: center;
-        background: #ddd;
+        background: transparent;
       }
 
       .orb-preview svg,
       .orb-preview img {
-        width: 50px;
-        height: 50px;
+        width: 225px;
+        height: 225px;
         border-radius: 50%;
       }
 
@@ -1891,10 +1891,10 @@
             const orbCanvas = this.orbCanvases[orbType];
             if (orbCanvas) {
               const previewCanvas = document.createElement("canvas");
-              previewCanvas.width = 50;
-              previewCanvas.height = 50;
+              previewCanvas.width = 225;
+              previewCanvas.height = 225;
               const ctx = previewCanvas.getContext("2d");
-              ctx.drawImage(orbCanvas, 0, 0, 50, 50);
+              ctx.drawImage(orbCanvas, 0, 0, 225, 225);
               preview.appendChild(previewCanvas);
             } else {
               // Fallback colored circle
@@ -1998,10 +1998,10 @@
             const orbCanvas = this.orbCanvases[orbType];
             if (orbCanvas) {
               const previewCanvas = document.createElement("canvas");
-              previewCanvas.width = 50;
-              previewCanvas.height = 50;
+              previewCanvas.width = 225;
+              previewCanvas.height = 225;
               const ctx = previewCanvas.getContext("2d");
-              ctx.drawImage(orbCanvas, 0, 0, 50, 50);
+              ctx.drawImage(orbCanvas, 0, 0, 225, 225);
               preview.appendChild(previewCanvas);
             } else {
               // Fallback colored circle
